--- a/ios/RNCameraIssue/Info.plist
+++ b/ios/RNCameraIssue/Info.plist
@@ -53,5 +53,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>TBD</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>TBD</string>
 </dict>
 </plist>
