--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,6 +12,8 @@ target 'RNCameraIssue' do
 
   pod 'RNFS', :path => '../node_modules/react-native-fs'
 
+  pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
+
   target 'RNCameraIssueTests' do
     inherit! :complete
     # Pods for testing
