--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@react-native-community/cameraroll": "^4.0.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
-    "react-native-fs": "^2.16.6"
+    "react-native-fs": "^2.16.6",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
